--- a/src/my.css
+++ b/src/my.css
@@ -210,14 +210,15 @@ h1{
 }
 
 .about-heading{
-    text-decoration: underline;
+  
     text-transform: uppercase;
-    text-decoration-color: white;
+ 
     color: yellow;
+    text-shadow:1px 1px 2px violet,-1px -1px 2px violet ;
 }
 
 .about-info{
-    color:#00ff00;
+    color: rgb(231, 145, 241);
     font-family: 'Lobster', cursive;
     text-align: justify;
 }
@@ -299,4 +300,3 @@ display: block;
     width:100%;
     height: 200px;
 }
-
